# little-crm

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mysite/: .dockerignore  Dockerfile
mysite/authapp/: forms.py  mixins.py  urls.py  views.py
mysite/authapp/templates/authapp/: base.html  login.html  register.html
mysite/fixtures/: 1_users.json  2_ordersapp_data.json
mysite/mysite/: settings.py  urls.py
mysite/ordersapp/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mysite/ordersapp/migrations/: 0001_initial.py
mysite/ordersapp/templates/ordersapp/: base.html  index.html  order_create.html  orders.html  temp.js
mysite/ordersapp/templates/ordersapp/components/: show_status_or_change_form.html
nginx/: nginx.conf
